fixed double scroll bar

--- a/src/skillsScreen/style.css
+++ b/src/skillsScreen/style.css
@@ -1,7 +1,3 @@
-html{
-  padding: 10px;
-}
-
 *{
   margin: 0;
 }
